# react-native-pubky

./: .npmignore  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  package-lock.json  package.json  react-native-pubky.podspec  setup-android-bindings.js  setup-ios-bindings.js  setup-local-android-bindings.js  setup-local-ios-bindings.js  setup-remote-android-bindings.js  setup-remote-ios-bindings.js  setup-rust.js  tsconfig.json
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/pubky/: PubkyModule.kt  PubkyPackage.kt
android/src/main/java/uniffi/pubkycore/: pubkycore.kt
android/src/main/java/uniffi/pubkymobile/: pubkymobile.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/pubky/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/PubkyExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/PubkyExample.xcodeproj/: project.pbxproj
example/ios/PubkyExample.xcodeproj/xcshareddata/xcschemes/: PubkyExample.xcscheme
example/ios/PubkyExample.xcworkspace/: contents.xcworkspacedata
example/ios/PubkyExampleTests/: PubkyExampleTests.m
example/src/: App.tsx
ios/: Pubky.mm  Pubky.swift  mobile.swift  pubkycore.swift  pubkymobile.swift
ios/Frameworks/PubkyCore.xcframework/: Info.plist
ios/Frameworks/PubkyCore.xcframework/ios-arm64-simulator/Headers/: pubkycoreFFI.h
ios/Frameworks/PubkyCore.xcframework/ios-arm64/Headers/: module.modulemap  pubkycoreFFI.h
ios/Frameworks/PubkyMobile.xcframework/: Info.plist
ios/Frameworks/PubkyMobile.xcframework/ios-arm64-simulator/Headers/: mobileFFI.h  pubkymobileFFI.h
ios/Frameworks/PubkyMobile.xcframework/ios-arm64/Headers/: pubkymobileFFI.h
rust/: Cargo.toml
rust/app/src/main/java/tech/forgen/todolist/rust/uniffi/mobile/: mobile.kt
rust/bindings/: module.modulemap
rust/ios/Mobile.xcframework/ios-arm64/Headers/: mobileFFI.h
rust/pubky/: Cargo.toml  README.md
rust/pubky/examples/authz/: README.md
rust/pubky/examples/authz/3rd-party-app/: index.html  package-lock.json  package.json
rust/pubky/examples/authz/3rd-party-app/src/: index.css  pubky-auth-widget.js
rust/pubky/examples/authz/authenticator/: Cargo.toml
rust/pubky/examples/authz/authenticator/src/: main.rs
rust/pubky/pubky/: Cargo.toml
rust/pubky/pubky-common/: Cargo.toml
rust/pubky/pubky-common/src/: auth.rs  capabilities.rs  crypto.rs  lib.rs  namespaces.rs  recovery_file.rs  session.rs  timestamp.rs
rust/pubky/pubky-homeserver/: Cargo.toml  README.md
rust/pubky/pubky-homeserver/src/: config.rs  config.toml  database.rs  error.rs  extractors.rs  lib.rs  main.rs  pkarr.rs  routes.rs  server.rs
rust/pubky/pubky-homeserver/src/database/: migrations.rs  tables.rs
rust/pubky/pubky-homeserver/src/database/migrations/: m0.rs
rust/pubky/pubky-homeserver/src/database/tables/: blobs.rs  entries.rs  events.rs  sessions.rs  users.rs
rust/pubky/pubky-homeserver/src/routes/: auth.rs  feed.rs  pkarr.rs  public.rs  root.rs
rust/pubky/pubky/pkg/: .gitignore  README.md  package.json
rust/pubky/pubky/pkg/test/: auth.js  keys.js  public.js  recovery.js
rust/pubky/pubky/src/: error.rs  lib.rs  native.rs  wasm.rs
rust/pubky/pubky/src/shared/: auth.rs  list_builder.rs  mod.rs  pkarr.rs  public.rs
rust/pubky/pubky/src/wasm/: http.rs  keys.rs  pkarr.rs  recovery_file.rs  session.rs
rust/src/: auth.rs  keypair.rs  lib.rs  types.rs  utils.rs
rust/testing/: main.rs
src/: index.tsx
